--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,36 @@
+asgiref==3.5.2
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cryptography==38.0.4
+defusedxml==0.7.1
+Django==3.2.9
+django-cors-headers==3.11.0
+django-environ==0.8.1
 djangorestframework==3.13.1
+grpcio==1.41.0
+idna==3.4
+isodate==0.6.1
+oauthlib==3.2.2
+pycparser==2.21
+pydub==0.25.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+scipy==1.8.0
+sentry-sdk==1.10.1
+six==1.16.0
+social-auth-app-django==5.2.0
+social-auth-core==4.4.2
+sqlparse==0.4.3
+tritonclient==2.19.0
+typing-extensions==4.4.0
+uritemplate==4.1.1
+urllib3==1.26.13
+uuid==1.30
+xmlsec==1.3.13
+whitenoise==6.3.0
+importlib-metadata==6.0.0
+gevent==22.10.2
