--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,4 +6,4 @@ django-grappelli==2.15.3
 djangorestframework==3.13.1
 psycopg2==2.9.2
 pycparser==2.21
-django-grappelli==2.15.3
+django-cors-headers==3.11.0
