--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "11.18.1",
+    "react-icons": "^4.6.0",
     "react-redux": "7.2.4",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
@@ -29,11 +30,10 @@
     "redux-observable": "1.2.0",
     "reselect": "4.0.0",
     "rxjs": "6.5.2",
-    "typescript": "4.8.4",
-    "react-icons": "^4.6.0"
+    "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@types/react-transition-group": "^4.4.5",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.5",
     "@types/enzyme": "3.9.2",
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/i18next": "13.0.0",
@@ -44,6 +44,7 @@
     "@types/react-i18next": "8.1.0",
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "5.3.3",
+    "@types/react-transition-group": "^4.4.5",
     "@types/redux-testkit": "1.0.3",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.13.1",
