--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,14 @@
   },
   "dependencies": {
     "@chakra-ui/pro-theme": "0.0.55",
-    "@chakra-ui/react": "2.4.9",
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fontsource/inter": "^4.5.13",
     "@reduxjs/toolkit": "1.8.3",
+    "@tanstack/react-table": "^8.10.1",
     "connected-react-router": "6.4.0",
-    "framer-motion": "6.2.10",
+    "framer-motion": "^6.2.10",
     "i18next": "21.8.14",
     "i18next-browser-languagedetector": "6.1.4",
     "ramda": "0.27.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-switch": "5.0.0",
+    "react-table": "^7.8.0",
     "react-transition-group": "^4.4.5",
     "redux-observable": "1.2.0",
     "reselect": "4.0.0",
@@ -44,6 +46,7 @@
     "@types/react-i18next": "8.1.0",
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "5.3.3",
+    "@types/react-table": "^7.7.15",
     "@types/react-transition-group": "^4.4.5",
     "@types/redux-testkit": "1.0.3",
     "enzyme": "3.9.0",
