--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "11.18.1",
     "react-icons": "^4.6.0",
+    "react-hook-form": "7.43.9",
     "react-redux": "7.2.4",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
