--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "husky-upgrade": "./lib/upgrader/bin.js"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/pro-theme": "0.0.55",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/inter": "^4.5.13",
+    "@hookform/error-message": "^2.0.1",
     "@reduxjs/toolkit": "1.8.3",
     "@tanstack/react-table": "^8.10.1",
     "connected-react-router": "6.4.0",
@@ -21,9 +23,9 @@
     "ramda": "0.27.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.43.9",
     "react-i18next": "11.18.1",
     "react-icons": "^4.6.0",
-    "react-hook-form": "7.43.9",
     "react-redux": "7.2.4",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
